--- a/DecibelPOCDUMMY.html
+++ b/DecibelPOCDUMMY.html
@@ -241,8 +241,8 @@
 				//console.log("Voice " + i.toString() + ' ' + voices[i].name + ' ' + voices[i].uri);
 				//}
 			var speech = new SpeechSynthesisUtterance(text);
-			speech.lang = 'en-US';
-			speech.voice = voices[2]
+			speech.lang = 'en-UK';
+			speech.voice = voices[1]
 			window.speechSynthesis.speak(speech);
 			if (flag==1)
 			{
