--- a/DecibelPOCDUMMY.html
+++ b/DecibelPOCDUMMY.html
@@ -362,7 +362,7 @@
 			$.ajax({
 			async: false,
 			dataType : 'json',
-			url: "https://github.com/kumar-sameer/voice-tableau/blob/master/POCdashboards.json",
+			url: "https://kumar-sameer.github.io/voice-tableau/POCdashboards.json",
 			type : 'GET',
 			success: function(data) {
 				for (var e1 = 0; e1 < data['dashboards'].length; e1++) {
