--- a/DecibelPOCDUMMY.html
+++ b/DecibelPOCDUMMY.html
@@ -302,8 +302,8 @@
 		
 		
         function UpdateRecognizedPhrase(json) {
-			  $.get(https://westus.api.cognitive.microsoft.com/luis/v2.0/apps/15e7265b-2406-4109-a9be-36ae1bdb470e?subscription-key=7086c50d3133487bbbe756b1ab1f5599&verbose=true&timezoneOffset=0&q="+input+"",
-            //$.get("https://westus.api.cognitive.microsoft.com/luis/v2.0/apps/631f2b5e-8875-48f2-984c-9e7e7c78a3e2?subscription-key=c642986d701f44b29227bc3b60fab71b&verbose=true&timezoneOffset=0&q="+input+"",
+			 //.$.get(https://westus.api.cognitive.microsoft.com/luis/v2.0/apps/15e7265b-2406-4109-a9be-36ae1bdb470e?subscription-key=7086c50d3133487bbbe756b1ab1f5599&verbose=true&timezoneOffset=0&q="+input+"",
+            $.get("https://westus.api.cognitive.microsoft.com/luis/v2.0/apps/631f2b5e-8875-48f2-984c-9e7e7c78a3e2?subscription-key=c642986d701f44b29227bc3b60fab71b&verbose=true&timezoneOffset=0&q="+input+"",
 			//$.get("https://westus.api.cognitive.microsoft.com/luis/v2.0/apps/21b9dd19-9b03-4fb5-87a8-337112c474b7?subscription-key=c642986d701f44b29227bc3b60fab71b&verbose=true&timezoneOffset=0&q="+input+"",
 			//$.get("https://westus.api.cognitive.microsoft.com/luis/v2.0/apps/5cac76d5-cdf5-4928-a48e-3fc400c5430a?subscription-key=c642986d701f44b29227bc3b60fab71b&timezoneOffset=0&verbose=true&q="+input+"",
                 function(data){
