--- a/DecibelPOCDUMMY.html
+++ b/DecibelPOCDUMMY.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>DECIBEL</title>
+    <title>TAKEDA</title>
     <meta charset="utf-8" />
     <script type="text/javascript" src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script> 
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -9,7 +9,7 @@
 <body style="font-family:'Helvetica Neue',Helvetica,Arial,sans-serif; font-size:13px;">
 
 <img src="deloitte-logo-print.png" class="logo_deloitte" alt="Deloitte" style="z-index:999;">
-<img src="Decibel.png" class="logo_decibel" alt="Decibel" height="60px" Width="180px" style="z-index:999;">
+<img src="takeda.png" class="logo_takeda" alt="takeda" height="60px" Width="180px" style="z-index:999;">
 <h2 class="head1"> Voice Enabled </h2>
 <h2 class="head2"> Cognitive  </h2>
 <h2 class="head3"> Platform  </h2>
