--- a/DecibelPOCDUMMY.html
+++ b/DecibelPOCDUMMY.html
@@ -15,7 +15,7 @@
 <h2 class="head3"> Platform  </h2>
 
 <img src="mic.png" id="speakAgainsmall" class="sabutton" hidden="" title="Click to speak again">
-<img src="bgfinal.png" class="bg_img" alt="background">
+<img src="bg1.jpg" class="bg_img" alt="background">
 <div class="speak-home">
 <button id="startBtn" class="stbutton" disabled="disabled" hidden="">Start</button>
 <button id="stopBtn" class="spbutton" disabled="disabled" hidden="">Stop</button>
