--- a/DecibelPOCDUMMY.html
+++ b/DecibelPOCDUMMY.html
@@ -8,14 +8,14 @@
 </head>
 <body style="font-family:'Helvetica Neue',Helvetica,Arial,sans-serif; font-size:13px;">
 
-<img src="deloitte2.jpg" class="logo_deloitte" alt="Deloitte" style="z-index:999;">
+<img src="deloitte2.jpg" class="logo_deloitte" alt="Deloitte" height="100px" Width="250px"style="z-index:999;">
 <img src="takeda.png" class="logo_takeda" alt="takeda" height="100px" Width="250px" style="z-index:999;">
 <h2 class="head1"> Voice Enabled </h2>
 <h2 class="head2"> Cognitive  </h2>
 <h2 class="head3"> Platform  </h2>
 
 <img src="mic.png" id="speakAgainsmall" class="sabutton" hidden="" title="Click to speak again">
-<img src="bg2.jpg" class="bg_img" alt="background">
+<img src="bg5.jpg" class="bg_img" alt="background">
 <div class="speak-home">
 <button id="startBtn" class="stbutton" disabled="disabled" hidden="">Start</button>
 <button id="stopBtn" class="spbutton" disabled="disabled" hidden="">Stop</button>
