--- a/DecibelPOCDUMMY.html
+++ b/DecibelPOCDUMMY.html
@@ -8,7 +8,7 @@
 </head>
 <body style="font-family:'Helvetica Neue',Helvetica,Arial,sans-serif; font-size:13px;">
 
-<img src="deloitte2.jpg" class="logo_deloitte" alt="Deloitte" height="100px" Width="250px"style="z-index:999;">
+<img src="deloitte-logo-print.png" class="logo_deloitte" alt="Deloitte" height="100px" Width="250px"style="z-index:999;">
 <img src="takeda.png" class="logo_takeda" alt="takeda" height="100px" Width="250px" style="z-index:999;">
 <h2 class="head1"> Voice Enabled </h2>
 <h2 class="head2"> Cognitive  </h2>
