--- a/DecibelPOCDUMMY.html
+++ b/DecibelPOCDUMMY.html
@@ -10,7 +10,7 @@
 
 <img src="deloitte-logo-print.png" class="logo_deloitte" alt="Deloitte" style="z-index:999;">
 <img src="takeda.png" class="logo_takeda" alt="takeda" height="100px" Width="250px" style="z-index:999;">
-<h2 class="head1"> Voice Enabled col = red</h2>
+<h2 class="head1" style="color:white;"> Voice Enabled </h2>
 <h2 class="head2"> Cognitive  </h2>
 <h2 class="head3"> Platform  </h2>
 
