--- a/DecibelPOCDUMMY.html
+++ b/DecibelPOCDUMMY.html
@@ -11,11 +11,11 @@
 <img src="deloitte-logo-print.png" class="logo_deloitte" alt="Deloitte" style="z-index:999;">
 <img src="takeda.png" class="logo_takeda" alt="takeda" height="100px" Width="250px" style="z-index:999;">
 <h2 class="head1" style="color:white;"> Voice Enabled </h2>
-<h2 class="head2"> Cognitive  </h2>
-<h2 class="head3"> Platform  </h2>
+<h2 class="head2" style="color:white;"> Cognitive  </h2>
+<h2 class="head3" style="color:white;"> Platform  </h2>
 
 <img src="mic.png" id="speakAgainsmall" class="sabutton" hidden="" title="Click to speak again">
-<img src="bg5.jpg" class="bg_img" alt="background">
+<img src="bg6.jpg" class="bg_img" alt="background">
 <div class="speak-home">
 <button id="startBtn" class="stbutton" disabled="disabled" hidden="">Start</button>
 <button id="stopBtn" class="spbutton" disabled="disabled" hidden="">Stop</button>
