--- a/DecibelPOCDUMMY.html
+++ b/DecibelPOCDUMMY.html
@@ -9,11 +9,10 @@
 <body style="font-family:'Helvetica Neue',Helvetica,Arial,sans-serif; font-size:13px;">
 
 <img src="deloitte-logo-print.png" class="logo_deloitte" alt="Deloitte" style="z-index:999;">
-<img src="Tableau.png" class="logo_Tableau" alt="Deloitte" style= float:left;height="100px" ; Width="250px";z-index:999;">
 <img src="takeda.png" class="logo_takeda" alt="takeda"  style= float:left;height="100px" ; Width="250px";z-index:999;">
-<h2 class="head1" style="color:grayscale;"> Voice Enabled </h2>
-<h2 class="head2" style="color:grayscale;"> Cognitive  </h2>
-<h2 class="head3" style="color:grayscale;"> Platform  </h2>
+<h2 class="head1" style="color:white;"> Voice Enabled </h2>
+<h2 class="head2" style="color:white;"> Cognitive  </h2>
+<h2 class="head3" style="color:white;"> Platform  </h2>
 
 <img src="mic.png" id="speakAgainsmall" class="sabutton" hidden="" title="Click to speak again">
 <img src="bg8.jpg" class="bg_img" alt="background">
