--- a/DecibelPOCDUMMY.html
+++ b/DecibelPOCDUMMY.html
@@ -8,13 +8,13 @@
 </head>
 <body style="font-family:'Helvetica Neue',Helvetica,Arial,sans-serif; font-size:13px;">
 
-<img src="DELOITTE3.png" class="logo_deloitte" alt="Deloitte" height="35px" Width="140px" style="z-index:999;">
+<img src="DELOITTE3.png" class="logo_deloitte" alt="Deloitte" height="35px" Width="150px" style="z-index:999;">
 <img src="takeda.png" class="logo_takeda" alt="takeda"  height="100px" Width="190px" style="z-index:999;">
 <h2 class="head1" style="color:white;"> Voice Enabled </h2>
 <h2 class="head2" style="color:white;"> Cognitive  </h2>
 <h2 class="head3" style="color:white;"> Platform  </h2>
 
-<img src="mic.png" id="speakAgainsmall" class="sabutton" hidden="" title="Click to speak again">
+<img src="mic2.png" id="speakAgainsmall" class="sabutton" hidden="" title="Click to speak again">
 <img src="bg6.jpg" class="bg_img" alt="background">
 <div class="speak-home">
 <button id="startBtn" class="stbutton" disabled="disabled" hidden="">Start</button>
