--- a/DecibelPOCDUMMY.html
+++ b/DecibelPOCDUMMY.html
@@ -9,10 +9,10 @@
 <body style="font-family:'Helvetica Neue',Helvetica,Arial,sans-serif; font-size:13px;">
 
 <img src="deloitte-logo-print.png" class="logo_deloitte" alt="Deloitte" style="z-index:999;">
-<img src="Decibel.png" class="logo_decibel" alt="Decibel" height="60px" Width="180px" style="z-index:999;">
-<h2 class="head1"> Voice Enabled </h2>
-<h2 class="head2"> Cognitive  </h2>
-<h2 class="head3"> Platform  </h2>
+<img src="takeda.png" class="logo_decibel" alt="Decibel" height="80px" Width="180px" style="z-index:999;">
+<h2 class="head1" style="color:White"> Voice Enabled </h2>
+<h2 class="head2" style="color:White"> Cognitive  </h2>
+<h2 class="head3" style="color:White"> Platform  </h2>
 
 <img src="mic.png" id="speakAgainsmall" class="sabutton" hidden="" title="Click to speak again">
 <img src="bg6.jpg" class="bg_img" alt="background">
