--- a/DecibelPOCDUMMY.html
+++ b/DecibelPOCDUMMY.html
@@ -394,7 +394,7 @@
 			
 			return fldassign;
 		}      
-	<!-- added by Sarat -->
+	<!-- added by Sameer -->
 		var viz,url,sheet,workbook,sharray;
 		if (viz) { // If a viz object exists, delete it.
                 viz.dispose();
